tests/paczka1/fuzzy1/44750219.err
Error in line 2: HM1V A543 43,4
Error in line 8: 2tKCfm8wxrG A543 78,0
Error in line 11: 2tKCfm8wxrG A808 38,4
Error in line 9: A277 A277 87,2
Error in line 34: ZUXSAKl A277 18,68
Error in line 38: A277 A543 2,9
Error in line 37: 2tKCfm8wxrG A220 89,3
